# unbom-rs

./: Cargo.toml  README.md  test.bom.txt  test.txt
src/: CHANGES.md  main.rs
